# shiori-sound-button

./: .gitignore  CMakeLists.txt  CREDITS.md  MainFrame.cpp  MainFrame.h  Makefile  Makefile_Linux  Makefile_OSX  README.md  Soundboard.cpp  Soundboard.h  main.cpp
SoundManager/: SoundPlayer.cpp  SoundPlayer.h
icon/: shiori_icon.rc
resources/: se_pointer.cpp  se_pointer.h  se_resources.h
resources/qt/: soundBoardRes.cpp
resources/se/: anaaan.cpp  angang.cpp  ban.cpp  eieiei.cpp  furukonnbodadon.cpp  hyaaa.cpp  kankan.cpp  kushami1.cpp  kushami10.cpp  kushami11.cpp  kushami2.cpp  kushami3.cpp  kushami4.cpp  kushami5.cpp  kushami6.cpp  kushami7.cpp  kushami8.cpp  kushami9.cpp  okiroa.cpp  oniichan_long.cpp  oniichan_short.cpp  otto.cpp  oyasumina.cpp  oyasuminasai_long.cpp  oyasuminasai_short.cpp  renda.cpp  shiori_excellent.cpp  shiori_excellent2.cpp  shiori_great.cpp  shiori_ne.cpp  shiori_punch.cpp  shiori_punch2.cpp  wanaaan.cpp  wanan.cpp  wanwang.cpp  yumeiri.cpp  yumeiriii.cpp  yumenoshioridayo.cpp  yumeotsu_long.cpp  yumeotsu_short.cpp  (+1 more)
